typescript/checker/tests/conformance/es6/Symbols/symbolProperty48.ts.stderr
error: NoSuchVar {
    span: Span {
        lo: BytePos(
            71,
        ),
        hi: BytePos(
            77,
        ),
        ctxt: #0,
    },
    name: Atom('Symbol' type=static),
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty48.ts:6:10
  |
6 |         [Symbol.iterator]() { }
  |          ^^^^^^

